--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,14 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Portfolio</title>
+   <meta name="author" content="Tit A. Poplatnik">
+   <meta name="keywords" content="Tit A. Poplatnik, Tit Poplatnik">
+   <meta name="description" content="My own website (for hypothetical stuff)">
+   <title>Index</title>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap" rel="stylesheet">
-   <script src="portfolio.js" defer></script>
+   <script src="me.js" defer></script>
  </head>
 <body>
 </body>
